Reset the CSS more robustly to prevent bleed

--- a/demos/iDoRecall-menu.less
+++ b/demos/iDoRecall-menu.less
@@ -27,10 +27,12 @@
 }
 
 .selection-menu li {
+    all: unset;  // reset all CSS properties, except in Safari - https://twitter.com/LeaVerou/status/577390241763467264
+
     cursor: pointer;
     display: inline-block;
-    padding: .75em 1em;
     margin: 0;
+    padding: .75em 1em;
     border-left: 3px solid #666666;
     -webkit-user-select: none;
     -webkit-touch-callout: none;
@@ -57,7 +59,7 @@
         color: white;
     }
 
-    background: none;
+    background: none;  // Safari doesn't do `all: unset` - https://twitter.com/LeaVerou/status/577390241763467264
 }
 
 
